modified:   index.html 	renamed:    src/assets/E-commerce.png -> public/assets/E-commerce.png 	renamed:    src/assets/arrow_up.svg -> public/assets/arrow_up.svg 	renamed:    src/assets/bar.svg -> public/assets/bar.svg 	renamed:    src/assets/blob.svg -> public/assets/blob.svg 	renamed:    src/assets/close.svg -> public/assets/close.svg 	renamed:    src/assets/code.svg -> public/assets/code.svg 	renamed:    src/assets/contact.svg -> public/assets/contact.svg 	renamed:    src/assets/css-3.png -> public/assets/css-3.png 	renamed:    src/assets/css/blobz.css -> public/assets/css/blobz.css 	renamed:    src/assets/css/blobz.min.css -> public/assets/css/blobz.min.css 	renamed:    src/assets/fb.png -> public/assets/fb.png 	renamed:    src/assets/flash.png -> public/assets/flash.png 	renamed:    src/assets/github-sign.png -> public/assets/github-sign.png 	renamed:    src/assets/html5.png -> public/assets/html5.png 	renamed:    src/assets/java.png -> public/assets/java.png 	renamed:    src/assets/js.png -> public/assets/js.png 	renamed:    src/assets/link.svg -> public/assets/link.svg 	renamed:    src/assets/location.svg -> public/assets/location.svg 	renamed:    src/assets/mail.svg -> public/assets/mail.svg 	renamed:    src/assets/me.png -> public/assets/me.png 	renamed:    src/assets/portfolio.png -> public/assets/portfolio.png 	renamed:    src/assets/prayerTimings.png -> public/assets/prayerTimings.png 	renamed:    src/assets/python.png -> public/assets/python.png 	renamed:    src/assets/restaurent.png -> public/assets/restaurent.png 	renamed:    src/assets/skills_icons/bootstrap.svg -> public/assets/skills_icons/bootstrap.svg 	renamed:    src/assets/skills_icons/mui.svg -> public/assets/skills_icons/mui.svg 	renamed:    src/assets/skills_icons/npm.svg -> public/assets/skills_icons/npm.svg 	renamed:    src/assets/skills_icons/react.svg -> public/assets/skills_icons/react.svg 	renamed:    src/assets/skills_icons/tailwind.svg -> public/assets/skills_icons/tailwind.svg 	renam

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .main {
-  background: url('/src/assets/me.png');
+  background: url('/assets/me.png');
   height: 90vh;
   width: 100%;
   background-position: top 25% right 0;
