--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -63,7 +63,7 @@
 .nav-links li a:hover:after {
     width: 100%;
     left: 0;
-    background-color: #00fffc;
+    background-color: #ffa500;
 }
 
 
